--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 html, body {
+  background-color: grey;
   margin: 0;
   padding: 0;
 }
 
 canvas {
+  padding: 0;
+  margin: auto;
   display: block;
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  outline: darkgray 10px solid;
 }
